// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes: <Sidebar/> selected menu item should select the active menu item based on current route 1`] = `
<div>
  <Sider
    className="Sidebar"
    collapsed={true}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <Menu
      mode="inline"
      selectedKeys={
        Array [
          "/contractors",
        ]
      }
      theme="dark"
    >
      <MenuItem
        className="Sidebar-header"
      >
        <img
          className="anticon"
          src="images/THOR-icon.png"
        />
        <span>
          Luber
        </span>
      </MenuItem>
      <MenuItem
        key="/welcome"
      >
        <Link
          replace={false}
          to="/welcome"
        >
          <Icon
            type="notification"
          />
          <span>
            Welcome!
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        key="/dashboard"
      >
        <Link
          replace={false}
          to="/dashboard"
        >
          <Icon
            type="home"
          />
          <span>
            Account Summary
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        key="/contractors"
      >
        <Link
          replace={false}
          to="#"
        >
          <Icon
            type="solution"
          />
          <span>
            Contractors
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        key="/payments"
      >
        <Link
          replace={false}
          to="/payments"
        >
          <Icon
            type="table"
          />
          <span>
            Payments
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        key="/accounts"
      >
        <Link
          replace={false}
          to="#"
        >
          <Icon
            type="setting"
          />
          <span>
            Connected Accounts
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        className="Sidebar-item-logout"
      >
        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            type="logout"
          />
          <span>
            Logout
          </span>
        </a>
      </MenuItem>
    </Menu>
    <div
      className="Sidebar-footer"
    >
      <img
        src="images/Logo-white2x-p-500.png"
      />
    </div>
  </Sider>
</div>
`;

exports[`routes: <Sidebar/> should render without crashing 1`] = `
<div>
  <Sider
    className="Sidebar"
    collapsed={true}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <Menu
      mode="inline"
      selectedKeys={
        Array [
          undefined,
        ]
      }
      theme="dark"
    >
      <MenuItem
        className="Sidebar-header"
      >
        <img
          className="anticon"
          src="images/THOR-icon.png"
        />
        <span>
          Luber
        </span>
      </MenuItem>
      <MenuItem
        key="/welcome"
      >
        <Link
          replace={false}
          to="/welcome"
        >
          <Icon
            type="notification"
          />
          <span>
            Welcome!
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        key="/dashboard"
      >
        <Link
          replace={false}
          to="/dashboard"
        >
          <Icon
            type="home"
          />
          <span>
            Account Summary
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        key="/contractors"
      >
        <Link
          replace={false}
          to="#"
        >
          <Icon
            type="solution"
          />
          <span>
            Contractors
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        key="/payments"
      >
        <Link
          replace={false}
          to="/payments"
        >
          <Icon
            type="table"
          />
          <span>
            Payments
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        key="/accounts"
      >
        <Link
          replace={false}
          to="#"
        >
          <Icon
            type="setting"
          />
          <span>
            Connected Accounts
          </span>
        </Link>
      </MenuItem>
      <MenuItem
        className="Sidebar-item-logout"
      >
        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            type="logout"
          />
          <span>
            Logout
          </span>
        </a>
      </MenuItem>
    </Menu>
    <div
      className="Sidebar-footer"
    >
      <img
        src="images/Logo-white2x-p-500.png"
      />
    </div>
  </Sider>
</div>
`;
